--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="ajouterNomBtn">Ajouter</button>
     </div>
     <div>
-        <ul ></ul>
+        <ul id="MyListe"></ul>
     </div>
     <div>
         <button id="popup-message">choisir un nom </button>
@@ -23,6 +23,6 @@
     
     
 </body>
-<script src="script"></script>
+<script src="script.js"></script>
 
 </html>
