Affichage le nom aleatoire

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul id="MyListe"></ul>
     </div>
     <div>
-        <button id="popup-message">choisir un nom </button>
+        <button id="popupMessageBtn">Choisir un nom</button>
     </div>
         
         
