--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenue dans le sélecteur de noms aléatoires</h1>
-    <div>
-        <input type="text" id="text" placeholder="veuillez entrer un nom"/>
-        <button id="ajouterNomBtn">Ajouter</button>
-    </div>
-    <div>
-        <ul id="MyListe"></ul>
-    </div>
-    <div>
+    <div class="container">
+        <h1>Bienvenue dans le sélecteur de noms aléatoires</h1>
+        <div class="AjouterDiv">
+           <input type="text" id="text" placeholder="veuillez entrer un nom"/>
+           <button id="ajouterNomBtn">Ajouter</button>
+        </div>
+        <div class="ListeDiv">
+           <ul id="MyListe"></ul>
+        </div>
+        <div>
         <button id="popupMessageBtn">Choisir un nom</button>
+        </div>
     </div>
     <div id="popupDiv" class="popupDiv">
         <p id="popupMessage"></p>
