--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Bienvenue dans le sélecteur de noms aléatoires</h1>
         <div class="AjouterDiv">
            <input type="text" id="text" placeholder="veuillez entrer un nom"/>
+           <p id="vide" class="classVide"></p>
            <button id="ajouterNomBtn">Ajouter</button>
         </div>
         <div class="ListeDiv">
